--- a/object-detection/notebooks/03-Training/training.ipynb
+++ b/object-detection/notebooks/03-Training/training.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-25 16:30:48.607541] Temporary directory created at: /tmp/tmpvhikd1gl\n",
+      "[2024-11-25 16:30:48.607758] List of directories to include in the zip file:\n",
+      " - /code/object-detection/assets/duckietown_object_detection_dataset/train\n",
+      " - /code/object-detection/assets/duckietown_object_detection_dataset/val\n",
+      "[2024-11-25 16:30:48.607790] Move subdirs to the temp root dir\n",
+      "[2024-11-25 16:30:50.090562] Compressing and creating the archive...\n",
+      "[2024-11-25 16:30:52.351449] Move subdirs back to original location\n",
+      "[2024-11-25 16:30:52.816586] Finished. Archive created at: /code/object-detection/assets/duckietown_object_detection_dataset/duckietown_object_detection_dataset.zip\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tempfile\n",
@@ -228,9 +243,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
